external-crates/move/crates/move-compiler/tests/development/signed_ints/valid/signed_int_inference.move
// tests type inference with signed integers
module a::m {
    fun inference() {
        let _x: i64 = 1;
        let _y: i8 = 5;
        let _z: i256 = 5;
    }
}
